--- a/Authentication/Authentication/Authentication.csproj
+++ b/Authentication/Authentication/Authentication.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
