--- a/Authentication/Authentication/appsettings.json
+++ b/Authentication/Authentication/appsettings.json
@@ -51,6 +51,6 @@
     "IdentityServerUri": "https://localhost:5001/",
     "ClientId": "washmeauthapps",
     "ClientSecret": "9VCBF3utjOva8h_ArblTB2VoHtmStosoL8UBQWJnCA9NCXub-LeOekUpk6ReZhKlp_m1mL9yodJoxMLcGP9",
-    "Scope": "AppsScope"
+    "Scope": "AppsScope,offline_access"
   }
 }
